# ambikha

./: purchase_product.feature  purchase_product.html  purchase_product.py  pyproject.toml  test_product_webpage.py  test_purchase_product_controller.py  test_ui.py  ui.py
.trunk/: actions  logs  notifications  out  tools
src/ambikha/: __init__.py  ai_demo.py  chat_bot.py
